--- a/nginx/mylinux.pro.conf
+++ b/nginx/mylinux.pro.conf
@@ -22,3 +22,29 @@ server {
     client_max_body_size 10M;
 }
 
+server {
+    listen 443 ssl;
+    server_name mylinux.pro www.mylinux.pro;
+
+    ssl_certificate /etc/letsencrypt/live/mylinux.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mylinux.pro/privkey.pem;
+
+    location / {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static {
+        alias /opt/project2/static_root;
+    }
+
+    location /media {
+        alias /opt/project2/media;
+    }
+
+    error_page 500 502 503 504 /500.html;
+    client_max_body_size 10M;
+}
