block access to /metrics into nginx.conf

--- a/nginx/mylinux.pro.conf
+++ b/nginx/mylinux.pro.conf
@@ -17,6 +17,11 @@ server {
     location /media {
         alias /opt/project2/media;
     }
+    
+    location /metrics {
+        allow 192.168.1.0/24;
+        deny all;
+    }
 
     error_page 500 502 503 504 /500.html;
     client_max_body_size 10M;
@@ -43,6 +48,11 @@ server {
 
     location /media {
         alias /opt/project2/media;
+    }
+
+    location /metrics {
+        allow 192.168.1.0/24;
+        deny all;
     }
 
     error_page 500 502 503 504 /500.html;
