--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.7.2
 Django==5.0.1
 django-ckeditor==6.7.0
 django-js-asset==2.2.0
+django-prometheus==2.3.1
 gunicorn==21.2.0
 packaging==23.2
+prometheus_client==0.20.0
 psycopg2-binary==2.9.9
 sqlparse==0.4.4
 typing_extensions==4.9.0
