fix feature of block access to django_prometheus metrics

--- a/nginx/mylinux.pro.conf
+++ b/nginx/mylinux.pro.conf
@@ -10,6 +10,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /metrics {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+	allow 37.252.4.129;
+	deny all;
+    }
+
     location /static {
         alias /opt/project2/static_root;
     }
@@ -18,11 +28,6 @@ server {
         alias /opt/project2/media;
     }
     
-    location /metrics {
-        allow 192.168.1.0/24;
-        deny all;
-    }
-
     error_page 500 502 503 504 /500.html;
     client_max_body_size 10M;
 }
@@ -42,17 +47,22 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /metrics {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        allow 37.252.4.129;
+        deny all;
+    }
+
     location /static {
         alias /opt/project2/static_root;
     }
 
     location /media {
         alias /opt/project2/media;
-    }
-
-    location /metrics {
-        allow 192.168.1.0/24;
-        deny all;
     }
 
     error_page 500 502 503 504 /500.html;
